res_crypto: Allow OpenSSL configured with no-deprecated.

The header <openssl/rsa.h> had to be included explicitly.

ASTERISK-27906

Change-Id: I41743801eed998c039d73db7a0762d104a4f75b2